# DeepGap

./: .gitignore  classic_timeseries.ipynb  docker-compose.yml  experimental.ipynb  fetch_moex.py  pyproject.toml  requirements.txt  tabular_prediction.ipynb
backend/: data_fetcher.py  fetch_moex.py  main.py  model.py  pipeline.py  requirements.txt  test_mlifar.py  utils.py  utils_mlifar.py
backend/notebooks/: finbert_sentiment.ipynb  train_LSTM.ipynb  train_LSTM.py  train_LSTM_v0.ipynb  train_LSTM_v0_price_seq.ipynb  train_LSTM_v1_single_company_sentiment.ipynb  train_LSTM_v2_single_company_embedding.ipynb  train_LSTM_v3_single_company_embedding_monthly.ipynb  train_LSTM_v4_price_vec.ipynb  train_LSTM_v5_base_30_volume.ipynb  train_LSTM_v6_looser_alignment.ipynb  train_lstm_v0_price_seq.py  train_lstm_v1_single_company_sentiment.py  train_lstm_v2_single_company_embedding.py  train_lstm_v4_price_vec.py
frontend/: app.py  requirements.txt
