[project]
name = "deep-gap"
version = "0.1.0"
description = "Stock Prices Prediction Web-service"
authors = [
    {name = "mikhail",email = "mikhailkulkov11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pandas-datareader (>=0.10.0,<0.11.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "dash (>=3.2.0,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "numpy (==1.25)",
    "matplotlib (==3.9)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (==1.6)",
    "tsfresh (>=0.21.1,<0.22.0)",
    "openai (>=2.3.0,<3.0.0)",
    "markdown-pdf (>=1.10,<2.0)",
    "tavily-python (>=0.7.12,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
